test/test_examples/syntactic_examples/syntax_error/error_statement_28.zig
// Syntax error: incorrect number of brackets in expression

const ifj = @import("ifj24.zig"); 

pub fn main() void {
   const x  = (10-8));
}